# Robos-Nutrebem

./: .env.example  .gitignore  README.md  SECURITY.md  dados_robo_teste.csv  main.py  pyproject.toml  requirements.txt  robo_nutrebem.py  robo_nutrebem_prod.py  robo_nutrebem_staging.py  robo_nutrebem_v2.py
.github/: CONTRIBUTING.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md
