[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "robo-nutrebem"
version = "1.0.0"
description = "Automation robot with Playwright Python for managing product restrictions in Nutrebem canteen systems"
readme = "README.md"
requires-python = ">=3.7"
authors = [
    {name = "Tarsio Oliveira", email = "tarsius@example.com"}
]
license = {text = "UNLICENSED"}
keywords = [
    "automation",
    "browser-automation",
    "playwright",
    "nutrebem",
    "web-scraping",
    "python"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: Other/Proprietary License",
    "Natural Language :: Portuguese (Brazilian)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business",
    "Topic :: Utilities"
]

dependencies = [
    "playwright>=1.40.0",
    "pandas>=2.0.0",
    "python-dotenv>=1.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0"
]

[project.urls]
Homepage = "https://github.com/tarsiusoliveira/Robo-Nutrebem"
Documentation = "https://github.com/tarsiusoliveira/Robo-Nutrebem#readme"
Repository = "https://github.com/tarsiusoliveira/Robo-Nutrebem.git"
Issues = "https://github.com/tarsiusoliveira/Robo-Nutrebem/issues"

[tool.setuptools]
packages = ["robo_nutrebem"]

[tool.black]
line-length = 100
target-version = ['py37']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--cov=robo_nutrebem --cov-report=html --cov-report=term"

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
